Added lib/bin support for other configurations/platforms

--- a/AspireEngine.vcxproj
+++ b/AspireEngine.vcxproj
@@ -109,7 +109,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)lib\glew-2.1.0\x64;$(SolutionDir)lib\glfw-3.2.1\x64\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)lib\glew-2.1.0\$(Platform);$(SolutionDir)lib\glfw-3.2.1\$(Platform);</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
